[gd_scene load_steps=10 format=3 uid="uid://dqsg6l5rewdc2"]

[ext_resource type="Script" uid="uid://cd1v00toyvs0y" path="res://Scripts/start.gd" id="1_7mnbe"]
[ext_resource type="FontFile" uid="uid://iq653u836gk" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="2_c7qte"]
[ext_resource type="Texture2D" uid="uid://b1fovqcskaufv" path="res://Assets/buttons/MenuButtons.png" id="3_c7qte"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c7qte"]
atlas = ExtResource("3_c7qte")
region = Rect2(0, 280, 156, 40)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hcnmk"]
texture = SubResource("AtlasTexture_c7qte")

[sub_resource type="AtlasTexture" id="AtlasTexture_wyf2n"]
atlas = ExtResource("3_c7qte")
region = Rect2(0, 320, 156, 40)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_upsqf"]
texture = SubResource("AtlasTexture_wyf2n")

[sub_resource type="AtlasTexture" id="AtlasTexture_hcnmk"]
atlas = ExtResource("3_c7qte")
region = Rect2(0, 240, 156, 40)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wyf2n"]
texture = SubResource("AtlasTexture_hcnmk")

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7mnbe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.180392, 0.47451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 29
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_c7qte")
theme_override_font_sizes/font_size = 56
text = "Farked!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 9
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_c7qte")
theme_override_styles/hover = SubResource("StyleBoxTexture_hcnmk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_upsqf")
theme_override_styles/normal = SubResource("StyleBoxTexture_wyf2n")
text = "Play"

[node name="Rules" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_c7qte")
theme_override_styles/hover = SubResource("StyleBoxTexture_hcnmk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_upsqf")
theme_override_styles/normal = SubResource("StyleBoxTexture_wyf2n")
text = "Rules
"

[node name="Scoring" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_c7qte")
theme_override_styles/hover = SubResource("StyleBoxTexture_hcnmk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_upsqf")
theme_override_styles/normal = SubResource("StyleBoxTexture_wyf2n")
text = "Scoring"

[node name="Quit" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_c7qte")
theme_override_styles/hover = SubResource("StyleBoxTexture_hcnmk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_upsqf")
theme_override_styles/normal = SubResource("StyleBoxTexture_wyf2n")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Rules" to="." method="_on_rules_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Scoring" to="." method="_on_scoring_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
